Adjustments in HTML and CSS

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <section class="seccion-principal">
         
         <div class="div-h2">
-            <h2>Discover your quote!</h2>
+            <h2>Discover your Quote!</h2>
         </div>
         
         <div class="div-quote">
