--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
     </section>
 
     <footer class="seccion-footer">
-        <p class="p-footer">Made by <a href="https://github.com/luzyla" class="a-footer">@Luzyla</a> with Grateful, Love and a lot of 🧉</p>
+        <p class="p-footer">Made by <a href="https://github.com/luzyla" target="_blank" class="a-footer">@Luzyla</a> with Grateful, Love and a lot of 🧉</p>
     </footer>
 
     
